ARGUS-30210: Changed init scripts to make it possible to execute the application on Java versions >8.